# nrf52_gopro_zephyr

./: .gitignore  CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.rst  app.overlay  can_pb.sh  cansend.txt  connect_wifi_python.txt  gopro.dbc  prj.conf  west_build.txt
boards/vend/esp32c3_can/: Kconfig  Kconfig.esp32c3_can  board.yml  esp32c3_can-pinctrl.dtsi  esp32c3_can.dts  esp32c3_can_defconfig
boards/vend/esp32s3_can/: Kconfig  Kconfig.esp32s3_can  board.yml  esp32s3_can-pinctrl.dtsi  esp32s3_can_appcpu.dts  esp32s3_can_appcpu.yaml  esp32s3_can_procpu.dts  esp32s3_can_procpu.yaml  esp32s3_can_procpu_defconfig
boards/vend/goprocan_nrf52840/: Kconfig  Kconfig.goprocan_nrf52840  Kconfig.sysbuild  board.yml  goprocan_nrf52840-pinctrl.dtsi  goprocan_nrf52840.dts  goprocan_nrf52840.yml  goprocan_nrf52840_defconfig
boards/vend/native_sim/: native_sim.conf  native_sim.overlay
boards/vend/rc_nrf5340/: Kconfig.defconfig  Kconfig.rc_nrf5340  board.cmake  board.yml  rc_nrf5340-pinctrl.dtsi  rc_nrf5340_nrf5340_cpuapp.dts  rc_nrf5340_nrf5340_cpuapp.yml  rc_nrf5340_nrf5340_cpuapp_ns.dts  (+5 more)
rtt_logs/: start_rtt.sh
sniffer_logs/: connection.txt  gopro13_connection_fail.pcapng
src/: buttons.c  buttons.h  camera_exchange.txt  canbus.c  canbus.h  canbus_isotp.c  canbus_isotp.h  gopro.c  gopro.h  gopro_ble_discovery.c  gopro_ble_discovery.h  gopro_client.c  gopro_client.h  gopro_control.c  gopro_control.h  gopro_ids.h  gopro_packet.c  gopro_packet.h  gopro_protobuf.c  gopro_protobuf.h  led_rgb.c  led_rgb.h  led_simple.c  led_simple.h  leds.c  leds.h  main.c  shell.c  shell.h
src/nrf_hal/: gatt_dm.c  gatt_dm.h  scan.c  scan.h
src/protobuf/: gopro_client.options  gopro_client.proto
